iaac/blueprint/infra/modules/observability/tracing/otel-visualizer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-visualizer
  namespace: tracing
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 16686
    targetPort: 16686
  - name: collector
    port: 14268
    targetPort: 14268
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: otel-visualizer
